News UAT/force-app/main/default/objects/User__x/fields/Site_c__c.field-meta.xml
<CustomField>
    <fullName>Site_c__c</fullName>
    <externalDeveloperName>Site__c</externalDeveloperName>
    <label>Site</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AIRLIE BEACH</fullName>
            </value>
            <value>
                <fullName>APN NZ SALES</fullName>
            </value>
            <value>
                <fullName>BAY OF PLENTY</fullName>
            </value>
            <value>
                <fullName>BIG RIGS</fullName>
            </value>
            <value>
                <fullName>BILOELA</fullName>
            </value>
            <value>
                <fullName>BRISBANE</fullName>
            </value>
            <value>
                <fullName>BUNDABERG</fullName>
            </value>
            <value>
                <fullName>COFFS HARBOUR</fullName>
            </value>
            <value>
                <fullName>CONTACT CENTRE</fullName>
            </value>
            <value>
                <fullName>EMERALD</fullName>
            </value>
            <value>
                <fullName>EMPLOYMENT</fullName>
            </value>
            <value>
                <fullName>FRASER COAST</fullName>
            </value>
            <value>
                <fullName>GATTON</fullName>
            </value>
            <value>
                <fullName>GLADSTONE</fullName>
            </value>
            <value>
                <fullName>GOLD COAST</fullName>
            </value>
            <value>
                <fullName>GRAFTON</fullName>
            </value>
            <value>
                <fullName>GYMPIE</fullName>
            </value>
            <value>
                <fullName>HAMILTON AU</fullName>
            </value>
            <value>
                <fullName>IPSWICH</fullName>
            </value>
            <value>
                <fullName>KINGAROY</fullName>
            </value>
            <value>
                <fullName>LISMORE</fullName>
            </value>
            <value>
                <fullName>MACKAY</fullName>
            </value>
            <value>
                <fullName>MELBOURNE</fullName>
            </value>
            <value>
                <fullName>FORTITUDE VALLEY</fullName>
            </value>
            <value>
                <fullName>NZ - Admin</fullName>
            </value>
            <value>
                <fullName>ONLINE</fullName>
            </value>
            <value>
                <fullName>ROCKHAMPTON</fullName>
            </value>
            <value>
                <fullName>ROTORUA</fullName>
            </value>
            <value>
                <fullName>RURAL WEEKLY</fullName>
            </value>
            <value>
                <fullName>SENIORS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>