News UAT/force-app/main/default/objects/User__x/fields/Site_Code_c__c.field-meta.xml
<CustomField>
    <fullName>Site_Code_c__c</fullName>
    <externalDeveloperName>Site_Code__c</externalDeveloperName>
    <label>Site Code</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>