News UAT/force-app/main/default/objects/User__x/fields/SmallBannerPhotoUrl__c.field-meta.xml
<CustomField>
    <fullName>SmallBannerPhotoUrl__c</fullName>
    <externalDeveloperName>SmallBannerPhotoUrl</externalDeveloperName>
    <label>Url for IOS banner photo</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Url</type>
</CustomField>