News UAT/force-app/main/default/objects/User__x/fields/SmallPhotoUrl__c.field-meta.xml
<CustomField>
    <fullName>SmallPhotoUrl__c</fullName>
    <externalDeveloperName>SmallPhotoUrl</externalDeveloperName>
    <label>Photo</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Url</type>
</CustomField>