News UAT/force-app/main/default/objects/User__x/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <externalDeveloperName>State</externalDeveloperName>
    <label>State/Province</label>
    <length>80</length>
    <type>Text</type>
</CustomField>