News UAT/force-app/main/default/objects/User__x/fields/StayInTouchNote__c.field-meta.xml
<CustomField>
    <fullName>StayInTouchNote__c</fullName>
    <externalDeveloperName>StayInTouchNote</externalDeveloperName>
    <label>Stay-in-Touch Email Note</label>
    <length>512</length>
    <type>LongTextArea</type>
</CustomField>