News UAT/force-app/main/default/objects/User__x/fields/StayInTouchSignature__c.field-meta.xml
<CustomField>
    <fullName>StayInTouchSignature__c</fullName>
    <externalDeveloperName>StayInTouchSignature</externalDeveloperName>
    <label>Stay-in-Touch Email Signature</label>
    <length>512</length>
    <type>LongTextArea</type>
</CustomField>