News UAT/force-app/main/default/objects/User__x/fields/StayInTouchSubject__c.field-meta.xml
<CustomField>
    <fullName>StayInTouchSubject__c</fullName>
    <externalDeveloperName>StayInTouchSubject</externalDeveloperName>
    <label>Stay-in-Touch Email Subject</label>
    <length>80</length>
    <type>Text</type>
</CustomField>