News UAT/force-app/main/default/objects/User__x/fields/Street__c.field-meta.xml
<CustomField>
    <fullName>Street__c</fullName>
    <externalDeveloperName>Street</externalDeveloperName>
    <label>Street</label>
    <type>TextArea</type>
</CustomField>