News UAT/force-app/main/default/objects/User__x/fields/Target_Activity_Weekly_Total_c__c.field-meta.xml
<CustomField>
    <fullName>Target_Activity_Weekly_Total_c__c</fullName>
    <externalDeveloperName>Target_Activity_Weekly_Total__c</externalDeveloperName>
    <label>Target Activity Weekly Total</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>