News UAT/force-app/main/default/objects/User__x/fields/Territory_Code_c__c.field-meta.xml
<CustomField>
    <fullName>Territory_Code_c__c</fullName>
    <externalDeveloperName>Territory_Code__c</externalDeveloperName>
    <label>Territory Code</label>
    <length>15</length>
    <type>Text</type>
</CustomField>