News UAT/force-app/main/default/objects/User__x/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <externalDeveloperName>Title</externalDeveloperName>
    <label>Title</label>
    <length>80</length>
    <type>Text</type>
</CustomField>