News UAT/force-app/main/default/objects/User__x/fields/User_Department_c__c.field-meta.xml
<CustomField>
    <fullName>User_Department_c__c</fullName>
    <externalDeveloperName>User_Department__c</externalDeveloperName>
    <label>User Department</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>