News UAT/force-app/main/default/objects/User__x/fields/User_Start_Date_c__c.field-meta.xml
<CustomField>
    <fullName>User_Start_Date_c__c</fullName>
    <externalDeveloperName>User_Start_Date__c</externalDeveloperName>
    <label>User Start Date</label>
    <type>Date</type>
</CustomField>