News UAT/force-app/main/default/objects/User__x/fields/Username__c.field-meta.xml
<CustomField>
    <fullName>Username__c</fullName>
    <externalDeveloperName>Username</externalDeveloperName>
    <label>Username</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>