News UAT/force-app/main/default/objects/User__x/fields/UserPermissionsAvantgoUser__c.field-meta.xml
<CustomField>
    <fullName>UserPermissionsAvantgoUser__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>UserPermissionsAvantgoUser</externalDeveloperName>
    <label>AvantGo User</label>
    <type>Checkbox</type>
</CustomField>