News UAT/force-app/main/default/objects/User__x/fields/UserPermissionsCallCenterAutoLogin__c.field-meta.xml
<CustomField>
    <fullName>UserPermissionsCallCenterAutoLogin__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>UserPermissionsCallCenterAutoLogin</externalDeveloperName>
    <label>Auto-login To Call Center</label>
    <type>Checkbox</type>
</CustomField>