News UAT/force-app/main/default/objects/User__x/fields/UserPermissionsChatterAnswersUser__c.field-meta.xml
<CustomField>
    <fullName>UserPermissionsChatterAnswersUser__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>UserPermissionsChatterAnswersUser</externalDeveloperName>
    <label>Chatter Answers User</label>
    <type>Checkbox</type>
</CustomField>