News UAT/force-app/main/default/objects/User__x/fields/UserPermissionsInteractionUser__c.field-meta.xml
<CustomField>
    <fullName>UserPermissionsInteractionUser__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>UserPermissionsInteractionUser</externalDeveloperName>
    <label>Force.com Flow User</label>
    <type>Checkbox</type>
</CustomField>