News UAT/force-app/main/default/objects/User__x/fields/UserPermissionsMarketingUser__c.field-meta.xml
<CustomField>
    <fullName>UserPermissionsMarketingUser__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>UserPermissionsMarketingUser</externalDeveloperName>
    <label>Marketing User</label>
    <type>Checkbox</type>
</CustomField>