News UAT/force-app/main/default/objects/User__x/fields/UserPermissionsMobileUser__c.field-meta.xml
<CustomField>
    <fullName>UserPermissionsMobileUser__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>UserPermissionsMobileUser</externalDeveloperName>
    <label>Apex Mobile User</label>
    <type>Checkbox</type>
</CustomField>