News UAT/force-app/main/default/objects/User__x/fields/UserPermissionsOfflineUser__c.field-meta.xml
<CustomField>
    <fullName>UserPermissionsOfflineUser__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>UserPermissionsOfflineUser</externalDeveloperName>
    <label>Offline User</label>
    <type>Checkbox</type>
</CustomField>