News UAT/force-app/main/default/objects/User__x/fields/UserPermissionsSupportUser__c.field-meta.xml
<CustomField>
    <fullName>UserPermissionsSupportUser__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>UserPermissionsSupportUser</externalDeveloperName>
    <label>Service Cloud User</label>
    <type>Checkbox</type>
</CustomField>