News UAT/force-app/main/default/objects/User__x/fields/UserPreferencesActivityRemindersPopup__c.field-meta.xml
<CustomField>
    <fullName>UserPreferencesActivityRemindersPopup__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>UserPreferencesActivityRemindersPopup</externalDeveloperName>
    <label>ActivityRemindersPopup</label>
    <type>Checkbox</type>
</CustomField>