News UAT/force-app/main/default/objects/User__x/fields/UserPreferencesApexPagesDeveloperMode__c.field-meta.xml
<CustomField>
    <fullName>UserPreferencesApexPagesDeveloperMode__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>UserPreferencesApexPagesDeveloperMode</externalDeveloperName>
    <label>ApexPagesDeveloperMode</label>
    <type>Checkbox</type>
</CustomField>