News UAT/force-app/main/default/objects/User__x/fields/UserPreferencesCacheDiagnostics__c.field-meta.xml
<CustomField>
    <fullName>UserPreferencesCacheDiagnostics__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>UserPreferencesCacheDiagnostics</externalDeveloperName>
    <label>CacheDiagnostics</label>
    <type>Checkbox</type>
</CustomField>