News UAT/force-app/main/default/objects/User__x/fields/UserPreferencesContentEmailAsAndWhen__c.field-meta.xml
<CustomField>
    <fullName>UserPreferencesContentEmailAsAndWhen__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>UserPreferencesContentEmailAsAndWhen</externalDeveloperName>
    <label>ContentEmailAsAndWhen</label>
    <type>Checkbox</type>
</CustomField>