News UAT/force-app/main/default/objects/User__x/fields/UserPreferencesContentNoEmail__c.field-meta.xml
<CustomField>
    <fullName>UserPreferencesContentNoEmail__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>UserPreferencesContentNoEmail</externalDeveloperName>
    <label>ContentNoEmail</label>
    <type>Checkbox</type>
</CustomField>