News UAT/force-app/main/default/objects/User__x/fields/UserPreferencesCreateLEXAppsWTShown__c.field-meta.xml
<CustomField>
    <fullName>UserPreferencesCreateLEXAppsWTShown__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>UserPreferencesCreateLEXAppsWTShown</externalDeveloperName>
    <label>CreateLEXAppsWTShown</label>
    <type>Checkbox</type>
</CustomField>