News UAT/force-app/main/default/objects/User__x/fields/UserPreferencesDisableAllFeedsEmail__c.field-meta.xml
<CustomField>
    <fullName>UserPreferencesDisableAllFeedsEmail__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>UserPreferencesDisableAllFeedsEmail</externalDeveloperName>
    <label>DisableAllFeedsEmail</label>
    <type>Checkbox</type>
</CustomField>