News UAT/force-app/main/default/objects/User__x/fields/UserPreferencesEventRemindersCheckboxDef__c.field-meta.xml
<CustomField>
    <fullName>UserPreferencesEventRemindersCheckboxDef__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>UserPreferencesEventRemindersCheckboxDefault</externalDeveloperName>
    <label>EventRemindersCheckboxDefault</label>
    <type>Checkbox</type>
</CustomField>