News UAT/force-app/main/default/objects/User__x/fields/UserPreferencesGlobalNavBarWTShown__c.field-meta.xml
<CustomField>
    <fullName>UserPreferencesGlobalNavBarWTShown__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>UserPreferencesGlobalNavBarWTShown</externalDeveloperName>
    <label>GlobalNavBarWTShown</label>
    <type>Checkbox</type>
</CustomField>