News UAT/force-app/main/default/objects/User__x/fields/UserPreferencesGlobalNavGridMenuWTShown__c.field-meta.xml
<CustomField>
    <fullName>UserPreferencesGlobalNavGridMenuWTShown__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>UserPreferencesGlobalNavGridMenuWTShown</externalDeveloperName>
    <label>GlobalNavGridMenuWTShown</label>
    <type>Checkbox</type>
</CustomField>