News UAT/force-app/main/default/objects/User__x/fields/UserPreferencesHideBiggerPhotoCallout__c.field-meta.xml
<CustomField>
    <fullName>UserPreferencesHideBiggerPhotoCallout__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>UserPreferencesHideBiggerPhotoCallout</externalDeveloperName>
    <label>HideBiggerPhotoCallout</label>
    <type>Checkbox</type>
</CustomField>