News UAT/force-app/main/default/objects/User__x/fields/UserPreferencesHideChatterOnboardingSpla__c.field-meta.xml
<CustomField>
    <fullName>UserPreferencesHideChatterOnboardingSpla__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>UserPreferencesHideChatterOnboardingSplash</externalDeveloperName>
    <label>HideChatterOnboardingSplash</label>
    <type>Checkbox</type>
</CustomField>