News UAT/force-app/main/default/objects/User__x/fields/UserPreferencesHideCSNDesktopTask__c.field-meta.xml
<CustomField>
    <fullName>UserPreferencesHideCSNDesktopTask__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>UserPreferencesHideCSNDesktopTask</externalDeveloperName>
    <label>HideCSNDesktopTask</label>
    <type>Checkbox</type>
</CustomField>