News UAT/force-app/main/default/objects/User__x/fields/UserPreferencesHideCSNGetChatterMobileTa__c.field-meta.xml
<CustomField>
    <fullName>UserPreferencesHideCSNGetChatterMobileTa__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>UserPreferencesHideCSNGetChatterMobileTask</externalDeveloperName>
    <label>HideCSNGetChatterMobileTask</label>
    <type>Checkbox</type>
</CustomField>