News UAT/force-app/main/default/objects/User__x/fields/UserPreferencesHideEndUserOnboardingAssi__c.field-meta.xml
<CustomField>
    <fullName>UserPreferencesHideEndUserOnboardingAssi__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>UserPreferencesHideEndUserOnboardingAssistantModal</externalDeveloperName>
    <label>HideEndUserOnboardingAssistantModal</label>
    <type>Checkbox</type>
</CustomField>