News UAT/force-app/main/default/objects/User__x/fields/UserPreferencesHideLightningMigrationMod__c.field-meta.xml
<CustomField>
    <fullName>UserPreferencesHideLightningMigrationMod__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>UserPreferencesHideLightningMigrationModal</externalDeveloperName>
    <label>HideLightningMigrationModal</label>
    <type>Checkbox</type>
</CustomField>