News UAT/force-app/main/default/objects/User__x/fields/UserPreferencesHideS1BrowserUI__c.field-meta.xml
<CustomField>
    <fullName>UserPreferencesHideS1BrowserUI__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>UserPreferencesHideS1BrowserUI</externalDeveloperName>
    <label>HideS1BrowserUI</label>
    <type>Checkbox</type>
</CustomField>