News UAT/force-app/main/default/objects/User__x/fields/UserPreferencesHideSecondChatterOnboardi__c.field-meta.xml
<CustomField>
    <fullName>UserPreferencesHideSecondChatterOnboardi__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>UserPreferencesHideSecondChatterOnboardingSplash</externalDeveloperName>
    <label>HideSecondChatterOnboardingSplash</label>
    <type>Checkbox</type>
</CustomField>