News UAT/force-app/main/default/objects/User__x/fields/UserPreferencesHideSfxWelcomeMat__c.field-meta.xml
<CustomField>
    <fullName>UserPreferencesHideSfxWelcomeMat__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>UserPreferencesHideSfxWelcomeMat</externalDeveloperName>
    <label>HideSfxWelcomeMat</label>
    <type>Checkbox</type>
</CustomField>