News UAT/force-app/main/default/objects/User__x/fields/UserPreferencesLightningExperiencePrefer__c.field-meta.xml
<CustomField>
    <fullName>UserPreferencesLightningExperiencePrefer__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>UserPreferencesLightningExperiencePreferred</externalDeveloperName>
    <label>LightningExperiencePreferred</label>
    <type>Checkbox</type>
</CustomField>