News UAT/force-app/main/default/objects/User__x/fields/UserPreferencesPathAssistantCollapsed__c.field-meta.xml
<CustomField>
    <fullName>UserPreferencesPathAssistantCollapsed__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>UserPreferencesPathAssistantCollapsed</externalDeveloperName>
    <label>PathAssistantCollapsed</label>
    <type>Checkbox</type>
</CustomField>