News UAT/force-app/main/default/objects/User__x/fields/UserPreferencesPreviewLightning__c.field-meta.xml
<CustomField>
    <fullName>UserPreferencesPreviewLightning__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>UserPreferencesPreviewLightning</externalDeveloperName>
    <label>PreviewLightning</label>
    <type>Checkbox</type>
</CustomField>