News UAT/force-app/main/default/objects/User__x/fields/UserPreferencesReminderSoundOff__c.field-meta.xml
<CustomField>
    <fullName>UserPreferencesReminderSoundOff__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>UserPreferencesReminderSoundOff</externalDeveloperName>
    <label>ReminderSoundOff</label>
    <type>Checkbox</type>
</CustomField>