News UAT/force-app/main/default/objects/User__x/fields/UserPreferencesShowCityToExternalUsers__c.field-meta.xml
<CustomField>
    <fullName>UserPreferencesShowCityToExternalUsers__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>UserPreferencesShowCityToExternalUsers</externalDeveloperName>
    <label>ShowCityToExternalUsers</label>
    <type>Checkbox</type>
</CustomField>