News UAT/force-app/main/default/objects/User__x/fields/UserPreferencesShowCityToGuestUsers__c.field-meta.xml
<CustomField>
    <fullName>UserPreferencesShowCityToGuestUsers__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>UserPreferencesShowCityToGuestUsers</externalDeveloperName>
    <label>ShowCityToGuestUsers</label>
    <type>Checkbox</type>
</CustomField>