News UAT/force-app/main/default/objects/User__x/fields/UserPreferencesShowCountryToExternalUser__c.field-meta.xml
<CustomField>
    <fullName>UserPreferencesShowCountryToExternalUser__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>UserPreferencesShowCountryToExternalUsers</externalDeveloperName>
    <label>ShowCountryToExternalUsers</label>
    <type>Checkbox</type>
</CustomField>