News UAT/force-app/main/default/objects/User__x/fields/UserPreferencesShowCountryToGuestUsers__c.field-meta.xml
<CustomField>
    <fullName>UserPreferencesShowCountryToGuestUsers__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>UserPreferencesShowCountryToGuestUsers</externalDeveloperName>
    <label>ShowCountryToGuestUsers</label>
    <type>Checkbox</type>
</CustomField>