News UAT/force-app/main/default/objects/User__x/fields/UserPreferencesShowEmailToExternalUsers__c.field-meta.xml
<CustomField>
    <fullName>UserPreferencesShowEmailToExternalUsers__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>UserPreferencesShowEmailToExternalUsers</externalDeveloperName>
    <label>ShowEmailToExternalUsers</label>
    <type>Checkbox</type>
</CustomField>