News UAT/force-app/main/default/objects/User__x/fields/UserPreferencesShowEmailToGuestUsers__c.field-meta.xml
<CustomField>
    <fullName>UserPreferencesShowEmailToGuestUsers__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>UserPreferencesShowEmailToGuestUsers</externalDeveloperName>
    <label>ShowEmailToGuestUsers</label>
    <type>Checkbox</type>
</CustomField>