News UAT/force-app/main/default/objects/User__x/fields/UserPreferencesShowFaxToExternalUsers__c.field-meta.xml
<CustomField>
    <fullName>UserPreferencesShowFaxToExternalUsers__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>UserPreferencesShowFaxToExternalUsers</externalDeveloperName>
    <label>ShowFaxToExternalUsers</label>
    <type>Checkbox</type>
</CustomField>