News UAT/force-app/main/default/objects/User__x/fields/UserPreferencesShowFaxToGuestUsers__c.field-meta.xml
<CustomField>
    <fullName>UserPreferencesShowFaxToGuestUsers__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>UserPreferencesShowFaxToGuestUsers</externalDeveloperName>
    <label>ShowFaxToGuestUsers</label>
    <type>Checkbox</type>
</CustomField>