News UAT/force-app/main/default/objects/User__x/fields/UserPreferencesShowManagerToExternalUser__c.field-meta.xml
<CustomField>
    <fullName>UserPreferencesShowManagerToExternalUser__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>UserPreferencesShowManagerToExternalUsers</externalDeveloperName>
    <label>ShowManagerToExternalUsers</label>
    <type>Checkbox</type>
</CustomField>