News UAT/force-app/main/default/objects/User__x/fields/UserPreferencesShowManagerToGuestUsers__c.field-meta.xml
<CustomField>
    <fullName>UserPreferencesShowManagerToGuestUsers__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>UserPreferencesShowManagerToGuestUsers</externalDeveloperName>
    <label>ShowManagerToGuestUsers</label>
    <type>Checkbox</type>
</CustomField>