News UAT/force-app/main/default/objects/User__x/fields/UserPreferencesShowMobilePhoneToExternal__c.field-meta.xml
<CustomField>
    <fullName>UserPreferencesShowMobilePhoneToExternal__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>UserPreferencesShowMobilePhoneToExternalUsers</externalDeveloperName>
    <label>ShowMobilePhoneToExternalUsers</label>
    <type>Checkbox</type>
</CustomField>