News UAT/force-app/main/default/objects/User__x/fields/UserPreferencesShowMobilePhoneToGuestUse__c.field-meta.xml
<CustomField>
    <fullName>UserPreferencesShowMobilePhoneToGuestUse__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>UserPreferencesShowMobilePhoneToGuestUsers</externalDeveloperName>
    <label>ShowMobilePhoneToGuestUsers</label>
    <type>Checkbox</type>
</CustomField>