News UAT/force-app/main/default/objects/User__x/fields/UserPreferencesShowPostalCodeToExternalU__c.field-meta.xml
<CustomField>
    <fullName>UserPreferencesShowPostalCodeToExternalU__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>UserPreferencesShowPostalCodeToExternalUsers</externalDeveloperName>
    <label>ShowPostalCodeToExternalUsers</label>
    <type>Checkbox</type>
</CustomField>