News UAT/force-app/main/default/objects/User__x/fields/UserPreferencesShowPostalCodeToGuestUser__c.field-meta.xml
<CustomField>
    <fullName>UserPreferencesShowPostalCodeToGuestUser__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>UserPreferencesShowPostalCodeToGuestUsers</externalDeveloperName>
    <label>ShowPostalCodeToGuestUsers</label>
    <type>Checkbox</type>
</CustomField>