News UAT/force-app/main/default/objects/User__x/fields/UserPreferencesShowProfilePicToGuestUser__c.field-meta.xml
<CustomField>
    <fullName>UserPreferencesShowProfilePicToGuestUser__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>UserPreferencesShowProfilePicToGuestUsers</externalDeveloperName>
    <label>ShowProfilePicToGuestUsers</label>
    <type>Checkbox</type>
</CustomField>