News UAT/force-app/main/default/objects/User__x/fields/UserPreferencesShowStateToExternalUsers__c.field-meta.xml
<CustomField>
    <fullName>UserPreferencesShowStateToExternalUsers__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>UserPreferencesShowStateToExternalUsers</externalDeveloperName>
    <label>ShowStateToExternalUsers</label>
    <type>Checkbox</type>
</CustomField>