News UAT/force-app/main/default/objects/User__x/fields/UserPreferencesShowStateToGuestUsers__c.field-meta.xml
<CustomField>
    <fullName>UserPreferencesShowStateToGuestUsers__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>UserPreferencesShowStateToGuestUsers</externalDeveloperName>
    <label>ShowStateToGuestUsers</label>
    <type>Checkbox</type>
</CustomField>