News UAT/force-app/main/default/objects/User__x/fields/UserPreferencesShowStreetAddressToExtern__c.field-meta.xml
<CustomField>
    <fullName>UserPreferencesShowStreetAddressToExtern__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>UserPreferencesShowStreetAddressToExternalUsers</externalDeveloperName>
    <label>ShowStreetAddressToExternalUsers</label>
    <type>Checkbox</type>
</CustomField>