News UAT/force-app/main/default/objects/User__x/fields/UserPreferencesShowStreetAddressToGuestU__c.field-meta.xml
<CustomField>
    <fullName>UserPreferencesShowStreetAddressToGuestU__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>UserPreferencesShowStreetAddressToGuestUsers</externalDeveloperName>
    <label>ShowStreetAddressToGuestUsers</label>
    <type>Checkbox</type>
</CustomField>