News UAT/force-app/main/default/objects/User__x/fields/UserPreferencesShowTitleToExternalUsers__c.field-meta.xml
<CustomField>
    <fullName>UserPreferencesShowTitleToExternalUsers__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>UserPreferencesShowTitleToExternalUsers</externalDeveloperName>
    <label>ShowTitleToExternalUsers</label>
    <type>Checkbox</type>
</CustomField>