News UAT/force-app/main/default/objects/User__x/fields/UserPreferencesShowTitleToGuestUsers__c.field-meta.xml
<CustomField>
    <fullName>UserPreferencesShowTitleToGuestUsers__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>UserPreferencesShowTitleToGuestUsers</externalDeveloperName>
    <label>ShowTitleToGuestUsers</label>
    <type>Checkbox</type>
</CustomField>