News UAT/force-app/main/default/objects/User__x/fields/UserPreferencesShowWorkPhoneToExternalUs__c.field-meta.xml
<CustomField>
    <fullName>UserPreferencesShowWorkPhoneToExternalUs__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>UserPreferencesShowWorkPhoneToExternalUsers</externalDeveloperName>
    <label>ShowWorkPhoneToExternalUsers</label>
    <type>Checkbox</type>
</CustomField>