News UAT/force-app/main/default/objects/User__x/fields/UserPreferencesShowWorkPhoneToGuestUsers__c.field-meta.xml
<CustomField>
    <fullName>UserPreferencesShowWorkPhoneToGuestUsers__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>UserPreferencesShowWorkPhoneToGuestUsers</externalDeveloperName>
    <label>ShowWorkPhoneToGuestUsers</label>
    <type>Checkbox</type>
</CustomField>