News UAT/force-app/main/default/objects/User__x/fields/UserPreferencesTaskRemindersCheckboxDefa__c.field-meta.xml
<CustomField>
    <fullName>UserPreferencesTaskRemindersCheckboxDefa__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>UserPreferencesTaskRemindersCheckboxDefault</externalDeveloperName>
    <label>TaskRemindersCheckboxDefault</label>
    <type>Checkbox</type>
</CustomField>