News UAT/force-app/main/default/objects/User__x/fields/UserRoleId__c.field-meta.xml
<CustomField>
    <fullName>UserRoleId__c</fullName>
    <externalDeveloperName>UserRoleId</externalDeveloperName>
    <label>Role ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>