News UAT/force-app/main/default/objects/User__x/fields/UserType__c.field-meta.xml
<CustomField>
    <fullName>UserType__c</fullName>
    <externalDeveloperName>UserType</externalDeveloperName>
    <label>User Type</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>PowerPartner</fullName>
            </value>
            <value>
                <fullName>PowerCustomerSuccess</fullName>
            </value>
            <value>
                <fullName>CustomerSuccess</fullName>
            </value>
            <value>
                <fullName>Guest</fullName>
            </value>
            <value>
                <fullName>CspLitePortal</fullName>
            </value>
            <value>
                <fullName>CsnOnly</fullName>
            </value>
            <value>
                <fullName>SelfService</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>